# DigitalOceanDDNS

./: .gitignore  Cargo.toml  README.md  secret.sample
.cargo/: config.toml
scripts/: run.sh  run_cargo.sh
src/: main.rs
