[package]
name = "dyndns"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dns-lookup = "1.0.8"
ureq = { version = "2.6.2", features = ["json"] }
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
serde = "1.0.158"
serde_json = "1.0.94"
